# ksu-events

./: MANIFEST.in  README.md  manage.py  pyproject.toml  setup.py
.devcontainer/: devcontainer.json  docker-compose.yml
apps/ksu_events/: urls.py
apps/registration/: admin.py  views.py
ksu_cas_auth/: apps.py  settings.py
ksu_events/: admin.py  apps.py  asgi.py  forms.py  settings.py  urls.py  views.py  wsgi.py
ksu_events.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
ksu_events/base/: apps.py  settings.py  urls.py  views.py
ksu_events/events/: admin.py  apps.py  forms.py  urls.py
ksu_events/ksu_cas_auth/: apps.py  urls.py
ksu_events/ksu_events/: apps.py  settings.py  urls.py  views.py
ksu_events/migrations/: 0001_initial.py  0002_remove_event_season_remove_event_status_subevent.py  0002_remove_user_is_organizer_user_auth_role_user_event_and_more.py  0003_alter_user_auth_role.py  0004_alter_user_event.py  0005_eventattendance_rename_event_end_date_event_end_date_and_more.py  0007_user_auth_role.py
ksu_events/models/: __init__.py  mixins.py  model_attendance.py  model_authed_users.py  model_events.py  model_participant.py  model_participant_chaperone.py  model_registration.py  model_subevents.py  model_users.py  models_orgainizers.py  models_participants.py
ksu_events/oauth2/: __init__.py  accountAdapter.py  adapter.py  apps.py  provider.py  settings.py  urls.py  views.py
ksu_events/registration/: admin.py  apps.py  formatChecker.py  forms.py  urls.py  utilities.py  views.py
ksu_events/tests/: test_model_event.py
ksu_events/views/: mixins.py  (+1 more)
(+93 files in other folders)
